fix lightgallery css ?

--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -1,5 +1,6 @@
 ---
 layout: page
 ---
+<link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/assets/css/lightgallery.css" />
 <script src="{{site.url}}{{site.baseurl}}/assets/js/lightgallery.js"></script>
 {{ content }}
