--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -40,7 +40,7 @@ layout: page
                         <h6>
                             <a href="{{ site.author_website_url }}">
                                 <i class="fas fa-link" class="social-link"></i>
-                                {{site.author_website_url }}
+                                {{ site.author_website_url }}
                             </a>
                         </h6>
                         {% endif %}
@@ -48,7 +48,7 @@ layout: page
                         <h6>
                             <a href="https://hub.docker.com/u/{{ site.dockerhub_username }}">
                                 <i class="fab fa-docker" class="social-link"></i>
-                                {{site.author_website_url }}
+                                {{ site.dockerhub_username }}
                             </a>
                         </h6>
                         {% endif %}
